# memscan

./: .gitignore  BENCHMARKING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MEMORY_MAPPING.md  Makefile  OPTIMIZATION.md  PYTHON_BINDINGS_SUMMARY.md  README.md  bench.ps1  bench.sh  criterion.toml  pyproject.toml
.github/workflows/: benchmark.yml
benches/: hex_parsing.rs  memory_mapping.rs  pattern_search.rs
examples/: python_example.py  test_python_bindings.py
libmemscan/: .gitignore  Cargo.toml  README.md  build.rs
libmemscan/benches/: hex_parsing.rs  pattern_search.rs
libmemscan/src/: diff.rs  interactive.rs  lib.rs  memmap.rs  process.rs  python.rs  scanner.rs  values.rs
libmemscan/src/linux/: memmap.rs  mod.rs  process.rs
libmemscan/src/windows/: memmap.rs  memoryapi.rs  mod.rs  process.rs
libmemscan/tests/: integration_tests.rs  interactive_tests.rs  scanner_memmap_tests.rs
llm/: IMPLEMENTATION_SUMMARY.md  MEMORY_MAPPING.md  SCANNER_INTEGRATION.md
pymemscan/: Cargo.toml  Makefile  PYTHON_BINDINGS_SUMMARY.md  README.md  requirements.txt
pymemscan/python/memscan/: __init__.py
pymemscan/src/: lib.rs
python/: README.md
src/: cli.rs  handle.rs  lib.rs  main.rs  memoryapi.rs  process.rs  repl.rs  scanner.rs
tests/: benchmark_helpers.rs
