[package]
name = "memscan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
owo-colors = "4.2.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
	"winuser",
	"memoryapi",
	"sysinfoapi",
	"processthreadsapi",
	"handleapi",
	"winbase",
	"tlhelp32",
	"psapi",
] }
