[package]
name = "climemscan"
version = "0.1.0"
edition = "2024"

[dependencies]
libmemscan = { path = "libmemscan" }
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
owo-colors = "4.2.3"
anyhow = "1.0.100"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
libmemscan = { path = "libmemscan" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pattern_search"
harness = false

[[bench]]
name = "hex_parsing"
harness = false

[[bench]]
name = "memory_mapping"
harness = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
