[package]
name = "libmemscan"
version = "0.1.0"
edition = "2024"

[lib]
name = "libmemscan"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
owo-colors = "4.2.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
	"winuser",
	"memoryapi",
	"sysinfoapi",
	"processthreadsapi",
	"handleapi",
	"winbase",
	"tlhelp32",
	"psapi",
] }
